--- a/cloud/客户云云对接.md
+++ b/cloud/客户云云对接.md
@@ -49,7 +49,7 @@ Note over 客户云,技威云: appId、appToken、unionId
 ---
 
 ### 3、接口文档
-● 注：所以接口请求时都需携带签名相关参数，签名计算方式如下：[签名计算方式](http://note.youdao.com/groupshare/?token=1E676FB4DEF14F009BBFB67A216F6232&gid=108651055)
+● 注：所以接口请求时都需携带签名相关参数，签名计算方式如下：[签名计算方式](签名计算.md)
 
 #### 3.1、第三方客户App账号登录
 ##### 3.1.1. 接口描述
