更新了文案

--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/cs.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/cs.lproj/Localizable.strings
@@ -653,3 +653,12 @@
 "AA0656" = "Offline, aktualizace nedostupná";
 "AA0657" = "Anomálie systému";
 "AA0658" = "Zrušit";
+"AA0659" = "Aktuální verze nepodporuje přímé propojení tohoto zařízení. Stáhněte si aplikaci \"Xiaotun Cloud\" a přidejte ji a používejte ji.";
+"AA0660" = "Stáhnout";
+"AA0661" = "Přátelská Připomínka";
+"AA0662" = "Následující zařízení nejsou dostupná v aktuální aplikaci";
+"AA0663" = "Stáhněte si aplikaci \"Xiaotun Cloud\", abyste mohli dále používat";
+"AA0664" = "Nepřipomínat Znovu";
+"AA0665" = "O";
+"AA0666" = "reoqoo";
+"AA0669" = "Zadejte účet";
