--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/de.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/de.lproj/Localizable.strings
@@ -651,3 +651,12 @@
 "AA0656" = "Offline, Update nicht möglich";
 "AA0657" = "Systemanomalie";
 "AA0658" = "abbrechen";
+"AA0659" = "Die aktuelle Version unterstützt die direkte Bindung dieses Geräts nicht. Bitte laden Sie die \"Xiaotun Cloud\"-App herunter, um sie hinzuzufügen und zu verwenden.";
+"AA0660" = "Herunterladen";
+"AA0661" = "Freundliche Erinnerung";
+"AA0662" = "Die folgenden Geräte sind in der aktuellen App nicht verfügbar";
+"AA0663" = "Bitte laden Sie die \"Xiaotun Cloud\"-App herunter, um weiterhin zu verwenden";
+"AA0664" = "Nicht erneut erinnern";
+"AA0665" = "Über";
+"AA0666" = "reoqoo";
+"AA0669" = "Bitte geben Sie Konto ein";
