--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/el.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/el.lproj/Localizable.strings
@@ -650,3 +650,12 @@
 "AA0656" = "Εκτός σύνδεσης, αδύνατη αναβάθμιση";
 "AA0657" = "Διαταραχές συστήματος";
 "AA0658" = "Ματαίωση";
+"AA0659" = "Η τρέχουσα έκδοση δεν υποστηρίζει την άμεση σύνδεση αυτής της συσκευής. Κατεβάστε την εφαρμογή \"Xiaotun Cloud\" για να την προσθέσετε και να τη χρησιμοποιήσετε.";
+"AA0660" = "Κατεβάστε";
+"AA0661" = "Φιλικό Υπενθύμισμα";
+"AA0662" = "Οι παρακάτω συσκευές δεν είναι διαθέσιμες στην τρέχουσα εφαρμογή";
+"AA0663" = "Κατεβάστε την εφαρμογή \"Xiaotun Cloud\" για να συνεχίσετε τη χρήση";
+"AA0664" = "Μην Ειδοποιείς Ξανά";
+"AA0665" = "Σχετικά με";
+"AA0666" = "reoqoo";
+"AA0669" = "Εισαγάγετε λογαριασμό";
