--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/en.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/en.lproj/Localizable.strings
@@ -66,7 +66,7 @@
 "AA0066" = "Requires scanning a QR code to connect and bind the device. Allow access to the camera?";
 "AA0067" = "Reject";
 "AA0068" = "No camera permissions, please enable it in settings";
-"AA0069" = "Allow \"reoqoo\" to use your location information?";
+"AA0069" = "Allow APP to use your location information?";
 "AA0070" = "Location permission is required to obtain Wi-Fi information for adding devices; please enable system location";
 "AA0071" = "The positioning permission is disabled. Please enable it in Settings";
 "AA0072" = "Allow \"reoqoo\" to use your album information？";
@@ -155,7 +155,7 @@
 "AA0155" = "Already shared with this friend";
 "AA0156" = "Sharing succeeded";
 "AA0157" = "Valid to";
-"AA0158" = "Scan the QR code using the reoqoo APP to share";
+"AA0158" = "Scan the QR code using the APP to share";
 "AA0159" = "Recent Shares";
 "AA0160" = "Failed to get the QR code. Click to refresh";
 "AA0161" = "%@ shared a device with you";
@@ -545,13 +545,13 @@
 "AA0546" = "Camera";
 "AA0547" = "Photo";
 "AA0548" = "Video";
-"AA0549" = "reoqoo requires your permission to access the photo library in order to use the QR code scanning feature.";
-"AA0550" = "reoqoo requires your permission to access the photo library in order to save device QR codes to the system album";
-"AA0551" = "reoqoo requires your permission to access the camera to use the QR code scanning feature";
-"AA0552" = "reoqoo requires  your permission to access the Bluetooth in order to access Bluetooth devices";
-"AA0553" = "reoqoo requires your permission to access the microphone to use the intercom feature";
-"AA0554" = "reoqoo requires your permission to access the local network for device connections";
-"AA0555" = "reoqoo requires you to grant permission for push notifications in order to receive device push notifications";
+"AA0549" = "Requires your permission to access the photo library in order to use the QR code scanning feature.";
+"AA0550" = "Requires your permission to access the photo library in order to save device QR codes to the system album";
+"AA0551" = "Requires your permission to access the camera to use the QR code scanning feature";
+"AA0552" = "Requires  your permission to access the Bluetooth in order to access Bluetooth devices";
+"AA0553" = "Requires your permission to access the microphone to use the intercom feature";
+"AA0554" = "Requires your permission to access the local network for device connections";
+"AA0555" = "Requires you to grant permission for push notifications in order to receive device push notifications";
 "AA0556" = "Device ID:";
 "AA0557" = "You do not have local network device access permission. Please enable it in the settings";
 "AA0558" = "Failed to create device QR code";
@@ -606,13 +606,13 @@
 "AA0607" = "Helps accurately locate the problem";
 "AA0608" = "At least 10 characters";
 "AA0609" = "Visit more";
-"AA0610" = "reoqoo cannot store and retrieve all the pictures. Please allow it to store and retrieve 'All Pictures'. Click to set";
-"AA0611" = "reoqoo has no access to the album. Click to set";
+"AA0610" = "APP cannot store and retrieve all the pictures. Please allow it to store and retrieve 'All Pictures'. Click to set";
+"AA0611" = "APP has no access to the album. Click to set";
 "AA0612" = "Please detail your suggestions or problems";
 "AA0613" = "Push notification settings";
 "AA0614" = "System access settings";
 "AA0615" = "Push notifications";
-"AA0616" = "Enable it to timely receive the latest messages from reoqoo APP";
+"AA0616" = "Enable it to timely receive the latest messages from APP";
 "AA0617" = "Grant permission";
 "AA0618" = "Enabled";
 "AA0619" = "Location";
@@ -629,7 +629,7 @@
 "AA0630" = "Enable it to use mini-window video playback and floating nursing alarm";
 "AA0631" = "Background pop-up";
 "AA0632" = "Enable it to timely receive nursing alarm notifications";
-"AA0633" = "To enhance your experience, reoqoo will request the following permissions in specific scenarios";
+"AA0633" = "To enhance your experience, APP will request the following permissions in specific scenarios";
 "AA0634" = "Authorized";
 "AA0635" = "Unauthorized";
 "AA0636" = "Local network";
@@ -653,3 +653,12 @@
 "AA0656" = "Offline, upgrade unavailable";
 "AA0657" = "System abnormality";
 "AA0658" = "Cancel";
+"AA0659" = "The current version does not support direct binding of this device. Please download the \"Xiaotun Cloud\" APP to add and use.";
+"AA0660" = "Download";
+"AA0661" = "Friendly Reminder";
+"AA0662" = "The following devices are not available in the current APP";
+"AA0663" = "Please download the \"WoWCam\" APP to continue using the device";
+"AA0664" = "Don't remind me again";
+"AA0665" = "About";
+"AA0666" = "reoqoo";
+"AA0669" = "Please enter account";
