--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/es.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/es.lproj/Localizable.strings
@@ -650,3 +650,12 @@
 "AA0656" = "Fuera de línea, no disponible";
 "AA0657" = "Anomalías del sistema";
 "AA0658" = "Cancelar";
+"AA0659" = "La versión actual no admite la vinculación directa de este dispositivo. Descarga la aplicación \"Xiaotun Cloud\" para agregarla y usarla.";
+"AA0660" = "Descargar";
+"AA0661" = "Recordatorio Amistoso";
+"AA0662" = "Los siguientes dispositivos no están disponibles en la aplicación actual";
+"AA0663" = "Por favor, descarga la aplicación \"Xiaotun Cloud\" para seguir usando";
+"AA0664" = "No Recordar de Nuevo";
+"AA0665" = "Acerca de";
+"AA0666" = "reoqoo";
+"AA0669" = "Introduzca la cuenta";
