--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fa.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fa.lproj/Localizable.strings
@@ -653,3 +653,12 @@
 "AA0656" = "آفلاین، ارتقا موقتاً غیرممکن است";
 "AA0657" = "ناعادت سیستم";
 "AA0658" = "لغو";
+"AA0659" = "نسخه فعلی از اتصال مستقیم این دستگاه پشتیبانی نمی‌کند. لطفاً برنامه \"Xiaotun Cloud\" را دانلود کنید تا اضافه و استفاده کنید.";
+"AA0660" = "دانلود";
+"AA0661" = "یادآوری دوستانه";
+"AA0662" = "دستگاه‌های زیر در برنامه فعلی در دسترس نیستند";
+"AA0663" = "لطفاً برنامه \"Xiaotun Cloud\" را دانلود کنید تا به استفاده ادامه دهید";
+"AA0664" = "دیگر یادآوری نکن";
+"AA0665" = "درباره";
+"AA0666" = "reoqoo";
+"AA0669" = "لطفا حساب را وارد کنید";
