--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fr.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fr.lproj/Localizable.strings
@@ -650,3 +650,12 @@
 "AA0656" = "Hors ligne, mise à jour indispo";
 "AA0657" = "Anomalies du système";
 "AA0658" = "Annuler";
+"AA0659" = "La version actuelle ne prend pas en charge la liaison directe de cet appareil. Veuillez télécharger l'application \"Xiaotun Cloud\" pour l'ajouter et l'utiliser.";
+"AA0660" = "Télécharger";
+"AA0661" = "Rappel amical";
+"AA0662" = "Les appareils suivants ne sont pas disponibles dans l'application actuelle";
+"AA0663" = "Veuillez télécharger l'application \"Xiaotun Cloud\" pour continuer à utiliser";
+"AA0664" = "Ne plus rappeler";
+"AA0665" = "À propos de";
+"AA0666" = "reoqoo";
+"AA0669" = "Veuillez entrer le compte";
