--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/id.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/id.lproj/Localizable.strings
@@ -653,3 +653,12 @@
 "AA0656" = "Offline, pembaruan tidak tersedia";
 "AA0657" = "Abnormalitas sistem";
 "AA0658" = "Batalkan";
+"AA0659" = "Versi saat ini tidak mendukung pengikatan langsung perangkat ini. Silakan unduh aplikasi \"Xiaotun Cloud\" untuk menambahkan dan menggunakan.";
+"AA0660" = "Unduh";
+"AA0661" = "Pengingat Ramah";
+"AA0662" = "Perangkat berikut tidak tersedia di aplikasi saat ini";
+"AA0663" = "Silakan unduh aplikasi \"Xiaotun Cloud\" untuk terus menggunakan";
+"AA0664" = "Jangan Ingatkan Lagi";
+"AA0665" = "reoqoo";
+"AA0666" = "reoqoo";
+"AA0669" = "Silakan masukkan akun";
