--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/it.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/it.lproj/Localizable.strings
@@ -650,3 +650,12 @@
 "AA0656" = "Offline, aggiornamento non disponibile";
 "AA0657" = "Anomalie del sistema";
 "AA0658" = "Annulla";
+"AA0659" = "La versione corrente non supporta il collegamento diretto di questo dispositivo. Si prega di scaricare l'app \"Xiaotun Cloud\" per aggiungerlo e utilizzarlo.";
+"AA0660" = "Scarica";
+"AA0661" = "Promemoria Gentile";
+"AA0662" = "I seguenti dispositivi non sono disponibili nell'app corrente";
+"AA0663" = "Si prega di scaricare l'app \"Xiaotun Cloud\" per continuare a utilizzare";
+"AA0664" = "Non Ricordare di Nuovo";
+"AA0665" = "Informazioni su";
+"AA0666" = "reoqoo";
+"AA0669" = "Inserisci l'account";
