--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ja.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ja.lproj/Localizable.strings
@@ -653,3 +653,12 @@
 "AA0656" = "オフライン、アップデート不可";
 "AA0657" = "システム異常";
 "AA0658" = "取消";
+"AA0659" = "現在のバージョンでは、このデバイスを直接バインドできません。\"Xiaotun Cloud\"アプリをダウンロードして追加し、使用してください。";
+"AA0660" = "ダウンロード";
+"AA0661" = "フレンドリーリマインダー";
+"AA0662" = "以下のデバイスは現在のアプリでは利用できません";
+"AA0663" = "引き続きご利用いただくには、\"Xiaotun Cloud\"アプリをダウンロードしてください";
+"AA0664" = "再び通知しない";
+"AA0665" = "について";
+"AA0666" = "reoqoo";
+"AA0669" = "アカウントを入力してください";
