--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ko.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ko.lproj/Localizable.strings
@@ -653,3 +653,12 @@
 "AA0656" = "오프라인, 업그레이드 불가";
 "AA0657" = "시스템 예외";
 "AA0658" = "전체 선택 취소";
+"AA0659" = "현재 버전은 이 장치를 직접 바인딩할 수 없습니다. \"Xiaotun Cloud\" 앱을 다운로드하여 추가하고 사용하십시오.";
+"AA0660" = "다운로드";
+"AA0661" = "친절한 알림";
+"AA0662" = "다음 장치는 현재 앱에서 사용할 수 없습니다";
+"AA0663" = "계속 사용하려면 \"Xiaotun Cloud\" 앱을 다운로드하십시오";
+"AA0664" = "다시 알리지 않음";
+"AA0665" = "정보";
+"AA0666" = "reoqoo";
+"AA0669" = "계정을 입력하세요";
