--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ms.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ms.lproj/Localizable.strings
@@ -653,3 +653,12 @@
 "AA0656" = "Luar talian, kemas kini tidak tersedia";
 "AA0657" = "Abnormaliti sistem";
 "AA0658" = "Membatalkan";
+"AA0659" = "Versi semasa tidak menyokong pengikatan langsung peranti ini. Sila muat turun aplikasi \"Xiaotun Cloud\" untuk menambah dan menggunakan.";
+"AA0660" = "Muat turun";
+"AA0661" = "Peringatan Mesra";
+"AA0662" = "Peranti berikut tidak tersedia dalam aplikasi semasa";
+"AA0663" = "Sila muat turun aplikasi \"Xiaotun Cloud\" untuk terus menggunakan";
+"AA0664" = "Jangan Ingatkan Lagi";
+"AA0665" = "Mengenai";
+"AA0666" = "reoqoo";
+"AA0669" = "Sila masukkan akaun";
