--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/nl.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/nl.lproj/Localizable.strings
@@ -650,3 +650,12 @@
 "AA0656" = "Offline, upgrade niet mogelijk";
 "AA0657" = "Systeemafwijkingen";
 "AA0658" = "Annuleren";
+"AA0659" = "De huidige versie ondersteunt het direct binden van dit apparaat niet. Download de \"Xiaotun Cloud\"-app om toe te voegen en te gebruiken.";
+"AA0660" = "Downloaden";
+"AA0661" = "Vriendelijke Herinnering";
+"AA0662" = "De volgende apparaten zijn niet beschikbaar in de huidige app";
+"AA0663" = "Download de \"Xiaotun Cloud\"-app om verder te gebruiken";
+"AA0664" = "Niet opnieuw herinneren";
+"AA0665" = "Over";
+"AA0666" = "reoqoo";
+"AA0669" = "Voer het account in";
