--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pl.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pl.lproj/Localizable.strings
@@ -650,3 +650,12 @@
 "AA0656" = "Offline, aktualizacja niedostępna";
 "AA0657" = "Nieprawidłowości układu";
 "AA0658" = "Anuluj";
+"AA0659" = "Obecna wersja nie obsługuje bezpośredniego wiązania tego urządzenia. Pobierz aplikację \"Xiaotun Cloud\", aby dodać i używać.";
+"AA0660" = "Pobierz";
+"AA0661" = "Przyjazne Przypomnienie";
+"AA0662" = "Poniższe urządzenia nie są dostępne w bieżącej aplikacji";
+"AA0663" = "Proszę pobrać aplikację \"Xiaotun Cloud\", aby kontynuować korzystanie";
+"AA0664" = "Nie Przypominaj Ponownie";
+"AA0665" = "O";
+"AA0666" = "reoqoo";
+"AA0669" = "Wprowadź konto";
