--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ru.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ru.lproj/Localizable.strings
@@ -651,3 +651,12 @@
 "AA0656" = "Офлайн, обновление недоступно";
 "AA0657" = "Системные аномалии";
 "AA0658" = "Отменить";
+"AA0659" = "Текущая версия не поддерживает прямое связывание этого устройства. Пожалуйста, скачайте приложение \"Xiaotun Cloud\", чтобы добавить и использовать.";
+"AA0660" = "Скачать";
+"AA0661" = "Дружеское напоминание";
+"AA0662" = "Следующие устройства недоступны в текущем приложении";
+"AA0663" = "Пожалуйста, скачайте приложение \"Xiaotun Cloud\", чтобы продолжить использование";
+"AA0664" = "Не напоминать снова";
+"AA0665" = "О";
+"AA0666" = "reoqoo";
+"AA0669" = "Пожалуйста, введите аккаунт";
