--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/sk.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/sk.lproj/Localizable.strings
@@ -653,3 +653,12 @@
 "AA0656" = "Offline, aktualizácia nedostupná";
 "AA0657" = "Abnormalita systému";
 "AA0658" = "Zrušiť";
+"AA0659" = "Aktuálna verzia nepodporuje priame prepojenie tohto zariadenia. Stiahnite si aplikáciu \"Xiaotun Cloud\" a pridajte ju a používajte ju.";
+"AA0660" = "Stiahnuť";
+"AA0661" = "Priateľská Pripomienka";
+"AA0662" = "Nasledujúce zariadenia nie sú k dispozícii v aktuálnej aplikácii";
+"AA0663" = "Stiahnite si aplikáciu \"Xiaotun Cloud\", aby ste mohli pokračovať v používaní";
+"AA0664" = "Nepripomínať Znova";
+"AA0665" = "O";
+"AA0666" = "reoqoo";
+"AA0669" = "Zadajte účet";
