--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/th.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/th.lproj/Localizable.strings
@@ -653,3 +653,12 @@
 "AA0656" = "ออฟไลน์ ไม่สามารถอัปเกรดได้";
 "AA0657" = "ความผิดปกติของระบบ";
 "AA0658" = "การยกเลิก";
+"AA0659" = "เวอร์ชันปัจจุบันไม่รองรับการผูกอุปกรณ์นี้โดยตรง โปรดดาวน์โหลดแอป \"Xiaotun Cloud\" เพื่อเพิ่มและใช้งาน";
+"AA0660" = "ดาวน์โหลด";
+"AA0661" = "คำเตือน";
+"AA0662" = "อุปกรณ์ต่อไปนี้ไม่พร้อมใช้งานในแอปปัจจุบัน";
+"AA0663" = "โปรดดาวน์โหลดแอป \"Xiaotun Cloud\" เพื่อใช้งานต่อไป";
+"AA0664" = "ไม่เตือนอีก";
+"AA0665" = "เกี่ยวกับ";
+"AA0666" = "reoqoo";
+"AA0669" = "กรุณาใส่บัญชีผู้ใช้";
