--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/tr.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/tr.lproj/Localizable.strings
@@ -650,3 +650,12 @@
 "AA0656" = "Çevrimdışı, güncelleme yok";
 "AA0657" = "Sistem abnormalliği";
 "AA0658" = "İptal et";
+"AA0659" = "Mevcut sürüm, bu cihazın doğrudan bağlanmasını desteklemiyor. Lütfen eklemek ve kullanmak için \"Xiaotun Cloud\" uygulamasını indirin.";
+"AA0660" = "İndir";
+"AA0661" = "Dostça Hatırlatma";
+"AA0662" = "Aşağıdaki cihazlar mevcut uygulamada kullanılamıyor";
+"AA0663" = "Kullanmaya devam etmek için lütfen \"Xiaotun Cloud\" uygulamasını indirin";
+"AA0664" = "Tekrar Hatırlatma";
+"AA0665" = "Hakkında";
+"AA0666" = "reoqoo";
+"AA0669" = "Lütfen hesap girin";
