--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/vi.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/vi.lproj/Localizable.strings
@@ -653,3 +653,12 @@
 "AA0656" = "Ngoại tuyến, không thể nâng cấp";
 "AA0657" = "Hệ thống ngoại lệ";
 "AA0658" = "Hủy bỏ";
+"AA0659" = "Phiên bản hiện tại không hỗ trợ liên kết trực tiếp thiết bị này. Vui lòng tải xuống ứng dụng \"Xiaotun Cloud\" để thêm và sử dụng.";
+"AA0660" = "Tải xuống";
+"AA0661" = "Nhắc nhở thân thiện";
+"AA0662" = "Các thiết bị sau không khả dụng trong ứng dụng hiện tại";
+"AA0663" = "Vui lòng tải xuống ứng dụng \"Xiaotun Cloud\" để tiếp tục sử dụng";
+"AA0664" = "Không nhắc lại";
+"AA0665" = "Về";
+"AA0666" = "reoqoo";
+"AA0669" = "Vui lòng nhập tài khoản";
