--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/zh-Hans.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/zh-Hans.lproj/Localizable.strings
@@ -5,7 +5,7 @@
 "AA0005" = "忘记密码？";
 "AA0006" = "快速注册";
 "AA0007" = "我已阅读并同意";
-"AA0008" = "reoqoo用户协议";
+"AA0008" = "用户协议";
 "AA0009" = "隐私协议";
 "AA0010" = "同意";
 "AA0011" = "不同意";
@@ -66,7 +66,7 @@
 "AA0066" = "需要扫描二维码进行连接和绑定设备，是否允许打开相机？";
 "AA0067" = "拒绝";
 "AA0068" = "没有相机权限，请在设置中开启";
-"AA0069" = "reoqoo想使用您的定位信息";
+"AA0069" = "APP想使用您的定位信息";
 "AA0070" = "需要定位权限来获取Wi-Fi信息以进行设备添加，请先开启系统定位";
 "AA0071" = "没有定位权限，请在设置中开启";
 "AA0072" = "reoqoo想使用您的相册信息";
@@ -155,7 +155,7 @@
 "AA0155" = "已经分享给该好友了";
 "AA0156" = "分享成功";
 "AA0157" = "有效期至";
-"AA0158" = "使用reoqoo APP扫描上方二维码共享设备";
+"AA0158" = "使用APP扫描上方二维码共享设备";
 "AA0159" = "已经分享的好友";
 "AA0160" = "二维码获取失败，点击刷新";
 "AA0161" = "收到%@分享的设备";
@@ -541,17 +541,17 @@
 "AA0542" = "下载失败，请检查设备网络后重试";
 "AA0543" = "升级失败，请重启设备后重试";
 "AA0544" = "升级中...";
-"AA0545" = "我已阅读并同意《reoqoo用户协议》和《隐私政策》";
+"AA0545" = "我已阅读并同意《用户协议》和《隐私政策》";
 "AA0546" = "相机";
 "AA0547" = "相片";
 "AA0548" = "视频";
-"AA0549" = "reoqoo需要您允许授权相册访问权限，以便使用二维码扫描功能";
-"AA0550" = "reoqoo需要您允许授权相册使用权限，以便将设备二维码保存到系统相册";
-"AA0551" = "reoqoo需要您允许授权相机使用权限，以便使用二维码扫描功能";
-"AA0552" = "reoqoo需要您允许授权蓝牙使用权限，以便访问蓝牙设备";
-"AA0553" = "reoqoo需要您允许授权麦克风使用权限，以便使用对讲功能";
-"AA0554" = "reoqoo需要您允许授权本地网络访问权限，以便进行设备连接";
-"AA0555" = "reoqoo需要您允许授权推送功能，以便接受设备推送通知";
+"AA0549" = "需要您允许授权相册访问权限，以便使用二维码扫描功能";
+"AA0550" = "需要您允许授权相册使用权限，以便将设备二维码保存到系统相册";
+"AA0551" = "需要您允许授权相机使用权限，以便使用二维码扫描功能";
+"AA0552" = "需要您允许授权蓝牙使用权限，以便访问蓝牙设备";
+"AA0553" = "需要您允许授权麦克风使用权限，以便使用对讲功能";
+"AA0554" = "需要您允许授权本地网络访问权限，以便进行设备连接";
+"AA0555" = "需要您允许授权推送功能，以便接受设备推送通知";
 "AA0556" = "设备ID：";
 "AA0557" = "没有本地局域网设备访问权限，请在设置中开启";
 "AA0558" = "创建设备二维码失败";
@@ -566,7 +566,7 @@
 "AA0567" = "目标账号不存在";
 "AA0568" = "欢迎您使用reoqoo！reoqoo是由深圳智多豚物联技术有限公司（以下简称“我们”）研发和运营的在线音视频平台，我们将通过《隐私政策》和《用户协议》帮助您了解我们收集、使用、存储和共享个人信息的情况，以及您所享有的相关权利。\n为了向您提供视频直播、视频回放、收藏订阅、社区互动等服务，我们需要收集您的视频录像、视频图片、设备信息、操作日志等个人信息；\n您可以在个人中心访问、更正、删除您的个人信息并管理您的授权；\n我们会采用业界领先的安全技术保护好您的个人信息。\n您可以通过阅读完整版%@和%@了解详细信息。\n如您同意，请点击“同意”接受我们的服务。";
 "AA0569" = "《隐私协议》";
-"AA0570" = "《reoqoo用户协议》";
+"AA0570" = "《用户协议》";
 "AA0571" = "Enjoy your real cool life";
 "AA0572" = "云服务正在升级中，敬请期待";
 "AA0573" = "网络异常";
@@ -606,13 +606,13 @@
 "AA0607" = "便于准确定位问题";
 "AA0608" = "最少10个字";
 "AA0609" = "访问更多";
-"AA0610" = "reoqoo只能存取相册部分相片, 建议允许存取`所有相片`, 点击去设置";
-"AA0611" = "reoqoo没有相册访问权限, 点击去设置";
+"AA0610" = "APP只能存取相册部分相片, 建议允许存取`所有相片`, 点击去设置";
+"AA0611" = "APP没有相册访问权限, 点击去设置";
 "AA0612" = "请详细描述您的建议或遇到的问题";
 "AA0613" = "消息推送设置";
 "AA0614" = "系统权限设置";
 "AA0615" = "消息推送通知";
-"AA0616" = "开启后，可及时获得reoqoo APP的最新消息";
+"AA0616" = "开启后，可及时获得APP的最新消息";
 "AA0617" = "去授权";
 "AA0618" = "已开启";
 "AA0619" = "位置";
@@ -629,7 +629,7 @@
 "AA0630" = "开启后，可使用监控视频的小窗播放功能、看护铃悬浮";
 "AA0631" = "后台弹出界面";
 "AA0632" = "开启后，可及时收到看护铃通知";
-"AA0633" = "为了向您提供更好的用户体验，reoqoo 会在特定场景下向您申请以下手机系统权限";
+"AA0633" = "为了向您提供更好的用户体验，APP会在特定场景下向您申请以下手机系统权限";
 "AA0634" = "已授权";
 "AA0635" = "未授权";
 "AA0636" = "本地网络";
@@ -653,3 +653,12 @@
 "AA0656" = "已离线，暂时无法升级";
 "AA0657" = "系统异常";
 "AA0658" = "取消全选";
+"AA0659" = "当前版本暂不支持直接绑定该设备，请下载\"小豚云\"APP添加使用。";
+"AA0660" = "去下载";
+"AA0661" = "温馨提示";
+"AA0662" = "以下设备在当前APP不可用";
+"AA0663" = "请下载“小豚云”APP继续使用";
+"AA0664" = "不再提醒";
+"AA0665" = "关于";
+"AA0666" = "小豚当家";
+"AA0669" = "请输入账号";
