--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/zh-Hant.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/zh-Hant.lproj/Localizable.strings
@@ -5,7 +5,7 @@
 "AA0005" = "忘記密碼?";
 "AA0006" = "快速註冊";
 "AA0007" = "我已閱讀並同意";
-"AA0008" = "reoqoo用戶協議";
+"AA0008" = "用戶協議";
 "AA0009" = "隱私協議";
 "AA0011" = "不同意";
 "AA0012" = "請輸入正確的郵箱或手機號";
@@ -65,7 +65,7 @@
 "AA0066" = "需要掃描二維碼進行連接和綁定設備，是否允許打開相機？";
 "AA0067" = "拒絕";
 "AA0068" = "沒有相機權限，請在設置中開啟";
-"AA0069" = "reoqoo想使用您的定位信息";
+"AA0069" = "APP想使用您的定位信息";
 "AA0070" = "需要定位權限來獲取Wi-Fi信息以進行設備添加，請先開啟系統定位";
 "AA0071" = "沒有定位權限，請在設置中開啟";
 "AA0072" = "reoqoo想使用您的相冊信息";
@@ -154,7 +154,7 @@
 "AA0155" = "已經分享給該好友了";
 "AA0156" = "分享成功";
 "AA0157" = "有效期至";
-"AA0158" = "使用reoqoo APP掃描上方二維碼共享設備";
+"AA0158" = "使用APP掃描上方二維碼共享設備";
 "AA0159" = "已經分享的好友";
 "AA0160" = "二維碼獲取失敗，點擊刷新";
 "AA0161" = "收到%@分享的設備";
@@ -540,17 +540,17 @@
 "AA0542" = "下載失敗，請檢查設備網絡後重試";
 "AA0543" = "升級失敗，請重啟設備後重試";
 "AA0544" = "升級中...";
-"AA0545" = "我已閱讀並同意《reoqoo用戶協議》和《隱私政策》";
+"AA0545" = "我已閱讀並同意《用戶協議》和《隱私政策》";
 "AA0546" = "相機";
 "AA0547" = "相片";
 "AA0548" = "視頻";
-"AA0549" = "reoqoo需要您允許授權相冊訪問權限，以便使用二維碼掃描功能";
-"AA0550" = "reoqoo需要您允許授權相冊使用權限，以便將設備二維碼保存到系統相冊";
-"AA0551" = "reoqoo需要您允許授權相機使用權限，以便使用二維碼掃描功能";
-"AA0552" = "reoqoo需要您允許授權藍牙使用權限，以便訪問藍牙設備";
-"AA0553" = "reoqoo需要您允許授權麥克風使用權限，以便使用對講功能";
-"AA0554" = "reoqoo需要您允許授權本地網絡訪問權限，以便進行設備連接";
-"AA0555" = "reoqoo需要您允許授權推送功能，以便接受設備推送通知";
+"AA0549" = "需要您允許授權相冊訪問權限，以便使用二維碼掃描功能";
+"AA0550" = "需要您允許授權相冊使用權限，以便將設備二維碼保存到系統相冊";
+"AA0551" = "需要您允許授權相機使用權限，以便使用二維碼掃描功能";
+"AA0552" = "需要您允許授權藍牙使用權限，以便訪問藍牙設備";
+"AA0553" = "需要您允許授權麥克風使用權限，以便使用對講功能";
+"AA0554" = "需要您允許授權本地網絡訪問權限，以便進行設備連接";
+"AA0555" = "需要您允許授權推送功能，以便接受設備推送通知";
 "AA0556" = "設備ID：";
 "AA0557" = "沒有本地局域網設備訪問權限，請在設置中開啟";
 "AA0558" = "創建設備二維碼失敗";
@@ -565,7 +565,7 @@
 "AA0567" = "目標賬號不存在";
 "AA0568" = "歡迎您使用reoqoo！reoqoo是由深圳智多豚物聯科技有限公司（以下簡稱“我們”）研發和運營的在線音視頻平台，我們將通過《隱私政策》和《用戶協議》幫助您了解我們收集、使用、存儲和共享個人信息的情況，以及您所享有的相關權利。 \n為了向您提供視頻直播、視頻回放、收藏訂閱、社區互動等服務，我們需要收集您的視頻錄像、視頻圖片、設備信息、操作日誌等個人信息；\n您可以在個人中心訪問、更正、刪除您的個人信息並管理您的授權；\n我們會採用業界領先的安全技術保護好您的個人信息。 \n您可以通過閱讀完整版%@和%@了解詳細信息。 \n如您同意，請點擊“同意”接受我們的服務。";
 "AA0569" = "《隱私協議》";
-"AA0570" = "《reoqoo用戶協議》";
+"AA0570" = "《用戶協議》";
 "AA0571" = "Enjoy your real cool life";
 "AA0572" = "雲服務正在升級中，敬請期待";
 "AA0573" = "網路異常";
@@ -605,13 +605,13 @@
 "AA0607" = "便於準確定位問題";
 "AA0608" = "最少10個字";
 "AA0609" = "訪問更多";
-"AA0610" = "reoqoo只能存取相冊部分相片, 建議允許存取`所有相片`, 點擊去設置";
-"AA0611" = "reoqoo沒有相冊訪問權限, 點擊去設置";
+"AA0610" = "APP只能存取相冊部分相片, 建議允許存取`所有相片`, 點擊去設置";
+"AA0611" = "APP沒有相冊訪問權限, 點擊去設置";
 "AA0612" = "請詳細描述您的建議或遇到的問題";
 "AA0613" = "消息推送設置";
 "AA0614" = "系統權限設置";
 "AA0615" = "消息推送通知";
-"AA0616" = "開啟後，可及時獲得reoqoo APP的最新消息";
+"AA0616" = "開啟後，可及時獲得APP的最新消息";
 "AA0617" = "去授權";
 "AA0618" = "已開啟";
 "AA0619" = "位置";
@@ -628,7 +628,7 @@
 "AA0630" = "開啟後，可使用監控視頻的小窗播放功能、看護鈴懸浮";
 "AA0631" = "後臺彈出界面";
 "AA0632" = "開啟後，可及時收到看護鈴通知";
-"AA0633" = "為了向您提供更好的用戶體驗，reoqoo 會在特定場景下向您申請以下手機系統權限";
+"AA0633" = "為了向您提供更好的用戶體驗，APP會在特定場景下向您申請以下手機系統權限";
 "AA0634" = "已授權";
 "AA0635" = "未授權";
 "AA0636" = "本地網絡";
@@ -652,3 +652,12 @@
 "AA0656" = "已離線，暫時無法陞級";
 "AA0657" = "系統异常";
 "AA0658" = "取消全選";
+"AA0659" = "當前版本暫不支援直接綁定該設備，請下載\"小豚雲\"APP新增使用。";
+"AA0660" = "去下載";
+"AA0661" = "溫馨提示";
+"AA0662" = "以下設備在當前APP不可用";
+"AA0663" = "請下載“小豚雲”APP繼續使用";
+"AA0664" = "不再提醒";
+"AA0665" = "關於";
+"AA0666" = "小豚當家";
+"AA0669" = "請輸入賬號";
