--- a/cloud/后台管理接口.md
+++ b/cloud/后台管理接口.md
@@ -3,10 +3,14 @@
 ### 1、接口文档
 ● 注：所以接口请求时都需携带签名相关参数，签名计算方式如下：[签名计算方式](http://note.youdao.com/groupshare/?token=1E676FB4DEF14F009BBFB67A216F6232&gid=108651055)
 
-#### 1.1、设备信息查询，限频==10/s==
+
+#### 1.1、设备信息查询
 ##### 1.1.1. 接口描述
 > 为客户的售后客服查询场景，提供设备信息查询能力。
- 
+
+> [!WARNING]
+> 接口限频：10/s
+
 ```
 请求地址：
 post
