Update API documentation with new structures
Added VssVO and FourCardVO structures with detailed parameters.

--- a/cloud/后台管理接口.md
+++ b/cloud/后台管理接口.md
@@ -207,8 +207,6 @@ data          |model |
 -------------|--------|----|----
 deviceList         |List<DeviceVO>  | 是 |设备列表
 
-
-
 **DeviceVO结构**：
 参数名       |类型    |必填|描述
 -------------|--------|----|----
@@ -218,6 +216,21 @@ vss         |VssVO  | 是 | 云存储信息
 fourCard         |FourCardVO  | 是 | 流量信息
 
 
+**VssVO结构**：
+参数名       |类型    |必填|描述
+-------------|--------|----|----
+vssExpireTime         |int64  | 是 | 云存储服务过期时间
+vssRenew         |int64  | 是 | 云存服务自动续费状态，0：未续费 ，1：续费中
+storageDuration         |int64  | 是 | 存储天数
+
+**FourCardVO结构**：
+参数名       |类型    |必填|描述
+-------------|--------|----|----
+fgExpireTime         |int64  | 是 | 4G流量服务过期时间
+fgRenew         |int64  | 是 | 流量服务自动续费状态，0：未续费，1：续费中
+surplusFlow         |int64  | 是 | 剩余流量，单位MB，仅流量包套餐有效
+totalFlow         |int64  | 是 | 总流量（单位MB），仅流量包套餐有效
+useFlow         |int64  | 是 | 已使用流量（单位MB），仅流量包套餐有效
 
 ##### 1.2.4. 返回结果
 ```
@@ -229,29 +242,17 @@ fourCard         |FourCardVO  | 是 | 流量信息
                 "devId": 3435XXxxx3944,
                 "relation": 1,
                 "vss": {
-                    "support": 0,
                     "vssExpireTime": 0,
-                    "mgsEnable": false,
                     "vssRenew": 0,
-                    "cornerUrl": "",
                     "type": 0,
                     "storageDuration": 0
                 },
                 "fourCard": {
-                    "status": 0,
-                    "support": 0,
-                    "purchaseUrl": "",
-                    "factoryId": 0,
                     "fgExpireTime": 0,
                     "fgRenew": 0,
-                    "cornerUrl": "",
                     "surplusFlow": 0,
                     "totalFlow": 0,
                     "useFlow": 0
-                },
-                "ai": {
-                    "aiSupport": 0,
-                    "aiInfo": 0
                 }
             }
         ]
